# common_system

./: .clang-tidy  .cppcheck  .gitignore  .grype.yaml  ARCHITECTURE.md  ARCHITECTURE_KO.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_MATRIX.md  DOC_REVIEW_REPORT.md  Doxyfile  IMPROVEMENTS.md  IMPROVEMENTS_KO.md  IMPROVEMENT_PLAN.md  INTEGRATION.md  INTEGRATION_POLICY.md  LICENSE  LICENSE-THIRD-PARTY  MIGRATION.md  MIGRATION_KO.md  NAMESPACE_MIGRATION.md  NEED_TO_FIX.md  NOTICES  README.kr.md  README.md  README_8md.html  README_KO.md  SECURITY.md  STRUCTURE.md  VCPKG_DEPLOYMENT.md  VERSIONING.md  WORKFLOW_FIXES_SUMMARY.md  abi__version__example_8cpp.html  abi__version__example_8cpp.js  abi__version__example_8cpp__incl.map  abi__version__example_8cpp__incl.md5  (+3023 more)
.github/: pull_request_template.md
benchmarks/: CMakeLists.txt  circuit_breaker_benchmark.cpp  circular_buffer_benchmark.cpp  event_bus_benchmark.cpp  global_logger_registry_benchmark.cpp  object_pool_benchmark.cpp  result_benchmark.cpp  service_container_benchmark.cpp
benchmarks/ecosystem/: CMakeLists.txt  data_pipeline_benchmark.cpp  ecosystem_harness.h  interface_overhead_benchmark.cpp  request_response_benchmark.cpp  scaling_benchmark.cpp
cmake/: KcenonCompilerRequirements.cmake  common-abi.cmake  common-extras.cmake  common-install.cmake  common-modules.cmake  common-summary.cmake  common-targets.cmake  common-tests.cmake  common_system-config.cmake.in  common_systemConfig.cmake.in  features.cmake
docs/: 01-ARCHITECTURE.md  ADAPTER_GUIDE.md  API_QUICK_REFERENCE.md  API_REFERENCE.kr.md  API_REFERENCE.md  API_REFERENCE_KO.md  ARCHITECTURE.kr.md  ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  ARCHITECTURE_ISSUES_KO.md  ARCHITECTURE_KO.md  BASELINE.md  BENCHMARKS.kr.md  BENCHMARKS.md  BEST_PRACTICES.md  CHANGELOG.kr.md  CHANGELOG.md  CHANGELOG_KO.md  COMPATIBILITY.kr.md  COMPATIBILITY.md  CONFIG_CLI_PARSER.md  CONFIG_GUIDE.md  CONFIG_LOADER.md  CONFIG_UNIFIED.md  CONFIG_WATCHER.md  CROSS_REFERENCE_GUIDE.md  CURRENT_STATE.md  CURRENT_STATE_KO.md  DEPENDENCY_GRAPH.md  DEPENDENCY_MATRIX.md  DEPENDENCY_MATRIX_KO.md  DEPLOYMENT_PATTERNS.md  DEPRECATION.kr.md  DEPRECATION.md  DEPRECATION_KO.md  ECOSYSTEM.md  ECOSYSTEM_BENCHMARKS.md  ECOSYSTEM_OVERVIEW.md  ERRORS.md  ERRORS_KO.md  (+73 more)
examples/: CMakeLists.txt  abi_version_example.cpp  adapter_pattern_example.cpp  circuit_breaker_example.cpp  cli_parser_example.cpp  concepts_showcase_example.cpp  config_watcher_example.cpp  event_bus_example.cpp  executor_example.cpp  feature_flags_example.cpp  health_check_example.cpp  result_example.cpp  service_container_example.cpp  unwrap_demo.cpp  utility_containers_example.cpp
examples/multi_system_app/: CMakeLists.txt  app.yaml  main.cpp
integration_tests/: CMakeLists.txt
integration_tests/failures/: error_handling_test.cpp
integration_tests/framework/: system_fixture.h  test_helpers.h
integration_tests/performance/: memory_pressure_test.cpp  result_performance_test.cpp
integration_tests/scenarios/: event_bus_integration_test.cpp  full_system_integration_test.cpp  result_pattern_integration_test.cpp  runtime_binding_integration_test.cpp
integration_tests/stress/: stress_test.cpp
sanitizers/: tsan_suppressions.txt
schemas/: unified_system_config.example.yaml  unified_system_config.schema.yaml
scripts/: build.bat  build.sh  check_circular_deps.py  check_circular_deps.sh  check_fetchcontent_pins.sh  check_version_drift.py  check_version_drift.sh  clean.sh  collect-notices.sh  generate_docs.sh  test.bat  test.sh  verify-notices.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  (+131 more)
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  abi_version_test.cpp  adapter_test.cpp  circuit_breaker_test.cpp  circular_buffer_test.cpp  cli_config_parser_test.cpp  concepts_test.cpp  config_loader_test.cpp  config_watcher_test.cpp  database_interface_test.cpp  enum_serialization_test.cpp  error_category_test.cpp  error_codes_test.cpp  event_bus_failure_test.cpp  event_bus_test.cpp  executor_test.cpp  failure_window_test.cpp  global_logger_registry_test.cpp  health_monitoring_test.cpp  improved_adapter_test.cpp  improved_event_bus_test.cpp  improved_result_test.cpp  log_functions_test.cpp  main.cpp  metric_collector_interface_test.cpp  module_verification_test.cpp  object_pool_test.cpp  result_helpers_test.cpp  result_test.cpp  security_controls_test.cpp  service_container_test.cpp  source_location_test.cpp  stats_snapshot_test.cpp  system_bootstrapper_test.cpp  thread_safety_tests.cpp  transport_interface_test.cpp  unified_bootstrapper_test.cpp  unified_config_test.cpp
tests/ecosystem-consumer/: vcpkg-configuration.json
tests/ecosystem-consumer/common-system/: CMakeLists.txt  main.cpp  vcpkg.json
tests/ecosystem-consumer/container-system/: CMakeLists.txt  main.cpp  vcpkg.json
tests/ecosystem-consumer/database-system/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
tests/ecosystem-consumer/logger-system/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
tests/ecosystem-consumer/monitoring-system/: CMakeLists.txt  main.cpp  vcpkg.json
tests/ecosystem-consumer/network-system/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
tests/ecosystem-consumer/pacs-system/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
tests/ecosystem-consumer/thread-system/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
tests/unit/: exception_mapper_test.cpp
tools/: add_frontmatter.py  analyze_benchmark_results.py  collect_baseline_metrics.sh  dependency_analyzer.py  (+1 more)
(+364 files in other folders)
